<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.nammahasiru.app.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_addPlant"
            app:destination="@id/addPlantFragment" />
        <action
            android:id="@+id/action_home_to_treeDetail"
            app:destination="@id/treeDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/addPlantFragment"
        android:name="com.nammahasiru.app.ui.add.AddPlantFragment"
        android:label="@string/add_plant"
        tools:layout="@layout/fragment_add_plant" />

    <fragment
        android:id="@+id/treeMapFragment"
        android:name="com.nammahasiru.app.ui.map.TreeMapFragment"
        android:label="@string/nav_map"
        tools:layout="@layout/fragment_tree_map">
        <action
            android:id="@+id/action_map_to_treeDetail"
            app:destination="@id/treeDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/speciesGuideFragment"
        android:name="com.nammahasiru.app.ui.guide.SpeciesGuideFragment"
        android:label="@string/nav_guide"
        tools:layout="@layout/fragment_species_guide" />

    <fragment
        android:id="@+id/treeDetailFragment"
        android:name="com.nammahasiru.app.ui.detail.TreeDetailFragment"
        android:label="Tree detail"
        tools:layout="@layout/fragment_tree_detail">
        <argument
            android:name="treeId"
            app:argType="long" />
    </fragment>
</navigation>
